--- a/build.xml
+++ b/build.xml
@@ -45,6 +45,8 @@
 				<attribute name="Main-Class" value="treesub.gui.AnnotatorGUI" />
 			</manifest>
 
+            <fileset dir="resources" />
+
 			<zipgroupfileset dir="lib" includes="*.jar" />
 		</jar>
 	</target>
